@@ -1,40 +1,32 @@
 package com.example.controller;
 
-import com.example.model.Book;
 import com.example.model.BorrowRecord;
+import com.example.repository.BookRepository;
+import com.example.repository.BorrowRecordRepository;
+import com.example.repository.ReaderRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
-import java.util.ArrayList;
-import java.util.List;
 
 @Controller
 public class BorrowRecordController {
 
-    private List<BorrowRecord> records = new ArrayList<>();
+    @Autowired
+    private BorrowRecordRepository borrowRecordRepo;
 
     @Autowired
-    private BookController bookController;
+    private BookRepository bookRepo;
 
-    public BorrowRecordController() {
-        try {
-            records.add(new BorrowRecord("BR1", "B1", "R1", "2025-06-01", "2025-06-15"));
-            records.add(new BorrowRecord("BR2", "B2", "R2", "2025-06-02", ""));
-            records.add(new BorrowRecord("BR3", "B3", "R3", "2025-06-03", ""));
-        } catch (Exception e) {
-            System.err.println("Lỗi khi khởi tạo danh sách phiếu mượn: " + e.getMessage());
-        } finally {
-            System.out.println("Hoàn tất khởi tạo BorrowRecordController");
-        }
-    }
+    @Autowired
+    private ReaderRepository readerRepo;
 
     @GetMapping("/borrow-records")
     public String showBorrowRecords(Model model) {
         try {
-            model.addAttribute("records", records);
+            model.addAttribute("records", borrowRecordRepo.findAll());
             model.addAttribute("record", new BorrowRecord("", "", "", "", ""));
             return "borrow-records";
         } catch (Exception e) {
@@ -48,53 +40,47 @@ public class BorrowRecordController {
     @PostMapping("/borrow-records/add")
     public String addBorrowRecord(@ModelAttribute("record") BorrowRecord record, RedirectAttributes redirectAttributes) {
         try {
-            if (record.getId() == null || record.getId().trim().isEmpty() ||
-                record.getBookId() == null || record.getBookId().trim().isEmpty() ||
-                record.getReaderId() == null || record.getReaderId().trim().isEmpty()) {
+            if (record.getId().isBlank() || record.getBookId().isBlank() || record.getReaderId().isBlank()) {
                 throw new IllegalArgumentException("Vui lòng điền đầy đủ ID phiếu mượn, mã sách và mã độc giả");
             }
 
-            if (records.stream().anyMatch(r -> r.getId().equals(record.getId()))) {
+            if (borrowRecordRepo.existsById(record.getId())) {
                 throw new IllegalArgumentException("ID phiếu mượn đã tồn tại");
             }
 
-            List<Book> books = bookController.getBooks();
-            boolean bookExists = books.stream().anyMatch(b -> b.getId().equals(record.getBookId()));
-            if (!bookExists) {
+            if (!bookRepo.existsById(record.getBookId())) {
                 throw new IllegalArgumentException("Sách không tồn tại trong thư viện");
             }
 
-            boolean isBookBorrowed = records.stream()
-                    .anyMatch(r -> r.getBookId().equals(record.getBookId()) && (r.getReturnDate() == null || r.getReturnDate().trim().isEmpty()));
+            if (!readerRepo.existsById(record.getReaderId())) {
+                throw new IllegalArgumentException("Độc giả không tồn tại trong thư viện");
+            }
+
+            boolean isBookBorrowed = borrowRecordRepo.findAll().stream()
+                    .anyMatch(r -> r.getBookId().equals(record.getBookId()) &&
+                                   (r.getReturnDate() == null || r.getReturnDate().isBlank()));
             if (isBookBorrowed) {
                 throw new IllegalArgumentException("Sách hiện đang được mượn");
             }
 
-            records.add(record);
+            borrowRecordRepo.save(record);
             redirectAttributes.addFlashAttribute("success", "Thêm phiếu mượn thành công");
-        } catch (IllegalArgumentException e) {
-            redirectAttributes.addFlashAttribute("error", e.getMessage());
         } catch (Exception e) {
             redirectAttributes.addFlashAttribute("error", "Lỗi khi thêm phiếu mượn: " + e.getMessage());
         } finally {
             System.out.println("Hoàn tất thao tác thêm phiếu mượn");
         }
-        return "redirect:/rl-records";
+        return "redirect:/borrow-records";
     }
 
     @GetMapping("/borrow-records/edit/{id}")
     public String showEditBorrowRecordForm(@PathVariable("id") String id, Model model, RedirectAttributes redirectAttributes) {
         try {
-            BorrowRecord record = records.stream()
-                    .filter(r -> r.getId().equals(id))
-                    .findFirst()
+            BorrowRecord record = borrowRecordRepo.findById(id)
                     .orElseThrow(() -> new IllegalArgumentException("Phiếu mượn không tồn tại"));
             model.addAttribute("record", record);
-            model.addAttribute("records", records);
+            model.addAttribute("records", borrowRecordRepo.findAll());
             return "borrow-records";
-        } catch (IllegalArgumentException e) {
-            redirectAttributes.addFlashAttribute("error", e.getMessage());
-            return "redirect:/borrow-records";
         } catch (Exception e) {
             redirectAttributes.addFlashAttribute("error", "Lỗi khi hiển thị form sửa phiếu mượn: " + e.getMessage());
             return "redirect:/borrow-records";
@@ -104,42 +90,34 @@ public class BorrowRecordController {
     }
 
     @PostMapping("/borrow-records/update")
-    public String updateBorrowRecord(@ModelAttribute("record") BorrowRecord updatedRecord, RedirectAttributes redirectAttributes) {
+    public String updateBorrowRecord(@ModelAttribute("record") BorrowRecord record, RedirectAttributes redirectAttributes) {
         try {
-            if (updatedRecord.getId() == null || updatedRecord.getId().trim().isEmpty() ||
-                updatedRecord.getBookId() == null || updatedRecord.getBookId().trim().isEmpty() ||
-                updatedRecord.getReaderId() == null || updatedRecord.getReaderId().trim().isEmpty()) {
+            if (record.getId().isBlank() || record.getBookId().isBlank() || record.getReaderId().isBlank()) {
                 throw new IllegalArgumentException("Vui lòng điền đầy đủ ID phiếu mượn, mã sách và mã độc giả");
             }
 
-            List<Book> books = bookController.getBooks();
-            boolean bookExists = books.stream().anyMatch(b -> b.getId().equals(updatedRecord.getBookId()));
-            if (!bookExists) {
-                throw new IllegalArgumentException("Sách không tồn tại trong thư viện");
-            }
-
-            boolean isBookBorrowed = records.stream()
-                    .anyMatch(r -> !r.getId().equals(updatedRecord.getId()) &&
-                            r.getBookId().equals(updatedRecord.getBookId()) &&
-                            (r.getReturnDate() == null || r.getReturnDate().trim().isEmpty()));
-            if (isBookBorrowed) {
-                throw new IllegalArgumentException("Sách hiện đang được mượn bởi phiếu mượn khác");
-            }
-
-            boolean found = false;
-            for (int i = 0; i < records.size(); i++) {
-                if (records.get(i).getId().equals(updatedRecord.getId())) {
-                    records.set(i, updatedRecord);
-                    found = true;
-                    break;
-                }
-            }
-            if (!found) {
+            if (!borrowRecordRepo.existsById(record.getId())) {
                 throw new IllegalArgumentException("Phiếu mượn không tồn tại");
             }
+
+            if (!bookRepo.existsById(record.getBookId())) {
+                throw new IllegalArgumentException("Sách không tồn tại");
+            }
+
+            if (!readerRepo.existsById(record.getReaderId())) {
+                throw new IllegalArgumentException("Độc giả không tồn tại");
+            }
+
+            boolean isBookBorrowed = borrowRecordRepo.findAll().stream()
+                    .anyMatch(r -> !r.getId().equals(record.getId()) &&
+                                   r.getBookId().equals(record.getBookId()) &&
+                                   (r.getReturnDate() == null || r.getReturnDate().isBlank()));
+            if (isBookBorrowed) {
+                throw new IllegalArgumentException("Sách hiện đang được mượn bởi phiếu khác");
+            }
+
+            borrowRecordRepo.save(record);
             redirectAttributes.addFlashAttribute("success", "Cập nhật phiếu mượn thành công");
-        } catch (IllegalArgumentException e) {
-            redirectAttributes.addFlashAttribute("error", e.getMessage());
         } catch (Exception e) {
             redirectAttributes.addFlashAttribute("error", "Lỗi khi cập nhật phiếu mượn: " + e.getMessage());
         } finally {
@@ -151,13 +129,12 @@ public class BorrowRecordController {
     @GetMapping("/borrow-records/delete/{id}")
     public String deleteBorrowRecord(@PathVariable("id") String id, RedirectAttributes redirectAttributes) {
         try {
-            boolean removed = records.removeIf(r -> r.getId().equals(id));
-            if (!removed) {
+            if (!borrowRecordRepo.existsById(id)) {
                 throw new IllegalArgumentException("Phiếu mượn không tồn tại");
             }
+
+            borrowRecordRepo.deleteById(id);
             redirectAttributes.addFlashAttribute("success", "Xóa phiếu mượn thành công");
-        } catch (IllegalArgumentException e) {
-            redirectAttributes.addFlashAttribute("error", e.getMessage());
         } catch (Exception e) {
             redirectAttributes.addFlashAttribute("error", "Lỗi khi xóa phiếu mượn: " + e.getMessage());
         } finally {
